# gRPC4Race

./: .gitignore  CMakeLists.txt  README.md  client.cpp  exp.md  server.cpp  vcpkg.json
Middleware/: CMakeLists.txt  Middleware.cpp
Middleware/Log/: CMakeLists.txt  Features.md  Logger.hpp
Proto/: CMakeLists.txt
Service/: CMakeLists.txt  Server.cpp
Test/: CMakeLists.txt  client.cpp
